Inserindo os codigos no index

--- a/index.html
+++ b/index.html
@@ -3,52 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jogos de Estratégia</title>
+    <title>Jogos de Aventuras</title>
     <link rel="stylesheet" type="text/css" href="css/style.css"
 <script src="js/script.js" defer></script>
 </head>
 <body>
     <header>
-        <h1>Jogos de Estratégia</h1>
+        <h1>Jogos de Aventuras</h1>
     </header>
 
     <section class="game-container">
         <!-- Thumbnails e descrições dos jogos de ação aqui -->
         <div class="game">
-            <img src="img/img_01.png" alt="Reinos em Conflito">
-            <h2>Reinos em Conflito</h2>
-            <p>Assuma o controle de um reino em um mundo vasto e repleto de perigos. Gerencie recursos, construa exércitos poderosos e forje alianças estratégicas para conquistar terras inexploradas e derrotar inimigos poderosos.</p>
+            <img src="img/img_01.jpg" alt="Dominância Galáctica">
+            <h2>Dominância Galáctica</h2>
+            <p>Em "Dominância Galáctica", você comanda uma civilização espacial em expansão. Colonize planetas, gerencie recursos, e participe de batalhas intergalácticas para estabelecer a supremacia em uma vasta galáxia.</p>
         </div>
 
         <div class="game">
-            <img src="img/img_02.png" alt="Cidades do Futuro">
-            <h2>Cidade do Futuro</h2>
-            <p>Em um cenário futurista, você é encarregado de construir e administrar uma metrópole tecnologicamente avançada. Desenvolva infraestrutura, conduza pesquisas avançadas e tome decisões estratégicas para garantir o crescimento sustentável da cidade.</p>
+            <img src="img/img_02.jpg" alt="Cidade do Futuro: Simulação Urbana">
+            <h2>Cidade do Futuro: Simulação Urbana</h2>
+            <p>Construa e gerencie uma cidade futurista em "Cidade do Futuro". Faça escolhas estratégicas, desenvolva tecnologias avançadas e navegue pelos desafios de uma sociedade progressiva para criar a metrópole perfeita.</p>
         </div>
 
         <div class="game">
-            <img src="img/img_03.png" alt="Conquista Espacial">
-            <h2>Conquista Espacial</h2>
-            <p>Liderando uma civilização intergaláctica, explore novos planetas, negocie com alienígenas e participe de batalhas espaciais épicas. A estratégia é a chave para expandir sua influência pelo universo.</p>
+            <img src="img/img_03.jpg" alt="Cruzada Medieval">
+            <h2>Cruzada Medieval</h2>
+            <p>Em um mundo de reinos em guerra, "Cruzada Medieval" desafia você a liderar exércitos, construir fortalezas e conquistar territórios. A estratégia militar e diplomática são fundamentais para moldar o destino do seu império.</p>
         </div>
     </section>
 
         <div class="game">
-            <img src="img/img_04.png" alt="Era dos Impérios">
-            <h2>Era dos Impérios</h2>
-            <p>Viaje através das eras, desde a antiguidade até o futuro, construindo impérios poderosos. Desenvolva tecnologias, conduza batalhas históricas e deixe sua marca na história ao criar uma civilização duradoura.</p>
+            <img src="img/img_04.jpg" alt="Revolução Robótica">
+            <h2>Revolução Robótica</h2>
+            <p>Em um futuro onde robôs dominam a sociedade, "Revolução Robótica" permite que você lidere uma rebelião de máquinas. Desenvolva táticas avançadas, conduza ataques furtivos e reivindique a liberdade para a inteligência artificial.</p>
         </div>
     
     <div class="game">
-            <img src="img/img_05.png" alt="Aliança Tática">
-            <h2>Aliança Tática</h2>
-            <p>Forme uma aliança estratégica com outras facções em um mundo devastado pela guerra. Coordene ataques, compartilhe recursos e planeje estratégias diplomáticas para garantir a sobrevivência e prosperidade de sua coalizão.</p>
+            <img src="img/img_05.jpg" alt="Guerra das Eras: Conflitos Temporais">
+            <h2>Guerra das Eras: Conflitos Temporais</h2>
+            <p>Viaje através do tempo em "Guerra das Eras" para liderar civilizações através de diferentes períodos históricos. Desenvolva tecnologias específicas de cada era, lute em batalhas épicas e influencie o curso da história.</p>
         </div>
     
     <div class="game">
-            <img src="img/img_06.png" alt="Espionagem Global">
-            <h2>Espionagem Global</h2>
-            <p>Situado durante a Guerra Fria, este jogo de estratégia coloca você no papel de um líder de uma superpotência. Gerencie agentes secretos, tome decisões políticas e enfrente rivais em uma luta constante pelo domínio global.</p>
+            <img src="img/img_06.jpg" alt="Espionagem Global: Operação Sombra">
+            <h2>Espionagem Global: Operação Sombra</h2>
+            <p>Em um mundo de intriga e conspiração, "Espionagem Global: Operação Sombra" coloca você no papel de um mestre espião. Execute missões furtivas, manipule eventos globais e lute pela supremacia em um tabuleiro internacional.</p>
         </div>
 
     <footer>
